--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Index
+    Flack: Menu
 {% endblock %}
 
 {% block js %}
     {% raw -%}
         <script id="new_channel" type="text/x-handlebars-template">
             <li class="room_entry">
-                <a href="{{ href }}">{{ room }}</a> ( <span id="{{ room }}_message_count">{{ count }}</span> Messages )
+                <span class="room"><a href="{{ href }}">{{ room }}</a></span>
+                <span class="count"> ( <span id="{{ room }}_message_count">{{ count }}</span> Messages )</span>
             </li>
         </script>
     {%- endraw %}
@@ -16,7 +17,7 @@
 {% endblock %}
 
 {% block body %}
-    <h4>Index Page</h4>
+    <h4>Menu Page</h4>
     <h6>
         Signed in as '{{ user }}'
     </h6>
@@ -32,7 +33,7 @@
         </form>
     </div>
     <br>
-    <div>
+    <div id="logout_button">
         <form action="{{ url_for('logout') }}" method="post">
             <button type="submit">Logout</button>
         </form>
