--- a/static/style.scss
+++ b/static/style.scss
@@ -27,19 +27,17 @@ h6 {
 // Menu CSS
 #room_list {
     list-style: none;
+    padding-left: 0;
 }
 .room_entry {
     position: relative;
     border-top: $b1;
-    margin-left: 31%;
-    margin-right: 34%;
     font-size: 16px;
     text-align: left;
     .room {
         font-size: small;
         padding-left: 1%;
         display: inline-block;
-        max-width: 65%;
         word-wrap: break-word;
     }
     .count {
@@ -49,6 +47,31 @@ h6 {
         right: 1%;
         top: 50%;
         transform: translateY(-50%);
+    }
+}
+@media (min-width: 1001px) {
+    .room_entry {
+        margin-left: 33%;
+        margin-right: 33%;
+    }
+}
+@media (max-width: 1000px) {
+    .room_entry {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+@media (min-width: 401px) {
+    .room {
+        max-width: 65%;
+    }
+}
+@media (max-width: 400px) {
+    .room {
+        max-width: 100%;
+    }
+    .count {
+        visibility: hidden;
     }
 }
 .room_entry:last-child {
@@ -61,8 +84,6 @@ h6 {
 .message_container {
     position: relative;
     border-top: $b2;
-    margin-left: 33%;
-    margin-right: 33%;
     font-size: 16px;
     text-align: left;
     .message_entry {
@@ -79,6 +100,23 @@ h6 {
         right: 1%;
         top: 50%;
         transform: translateY(-50%);
+    }
+}
+@media (min-width: 1001px) {
+    .message_container {
+        margin-left: 33%;
+        margin-right: 33%;
+    }
+}
+@media (max-width: 1000px) {
+    .message_container {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+@media (max-width: 400px) {
+    .message_time {
+        visibility: hidden;
     }
 }
 .message_container:last-child {
